--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -56,4 +56,4 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.ONEDRIVE_KEEPALIVE }}
+        github_token: ${{ secrets.GITHUB_TOKE }}
